--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head></head>
-    <body></body>
+    <body>
+        <h1>Heading 1</h1>
+        <h2>Heading 2</h2>
+    </body>
 </html>
