--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
     <body>
         <h1>Heading 1</h1>
         <h2>Heading 2</h2>
+        <p>I am very <em>very</em> <strong>VERY</strong> lazy. I have trouble focusing in all aspecgts of life.</p>
     </body>
 </html>
