--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
-<html>
-    <head></head>
-    <body>
-        <h1>Heading 1</h1>
-        <h2>Heading 2</h2>
-        <p>I am very <em>very</em> <strong>VERY</strong> lazy. I have trouble focusing in all aspecgts of life.</p>
-        <ul>
-            <li>1620</li>
-            <li>1420</li>
-            <li>1116</li>
-        </ul>
-    </body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+
+    <title>Week3</title>
+  </head>
+  <body>
+    <h1>Heading 1</h1>
+    <h2>Heading 2</h2>
+    <p>
+      I am very <em>very</em> <strong>VERY</strong> lazy. I have trouble
+      focusing in all aspecgts of life.
+    </p>
+    <ul>
+      <li><a href="https://www.bcit.ca/outlines/20223048467/">1620</a></li>
+      <li>1420</li>
+      <li>1116</li>
+    </ul>
+  </body>
 </html>
