added color to background and heading 1; added css and images files

--- a/index.html
+++ b/index.html
@@ -4,18 +4,21 @@
     <meta charset="UTF-8" />
 
     <title>Week3</title>
+    <link href="css/stylesheet.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <h1>Heading 1</h1>
     <h2>Heading 2</h2>
-    <p>
-      I am very <em>very</em> <strong>VERY</strong> lazy. I have trouble
-      focusing in all aspecgts of life.
-    </p>
-    <ul>
-      <li><a href="https://www.bcit.ca/outlines/20223048467/">1620</a></li>
-      <li>1420</li>
-      <li>1116</li>
-    </ul>
+    <main>
+      <p>
+        I am very <em>very</em> <strong>VERY</strong> lazy. I have trouble
+        focusing in all aspecgts of life.
+      </p>
+      <ul>
+        <li><a href="https://www.bcit.ca/outlines/20223048467/">1620</a></li>
+        <li>1420</li>
+        <li>1116</li>
+      </ul>
+    </main>
   </body>
 </html>
