added BCIT logo and updated title

--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
   <head>
     <meta charset="UTF-8" />
 
-    <title>Week3</title>
+    <title>Personal Website</title>
     <link href="css/stylesheet.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <h1>Heading 1</h1>
+    <img
+    src="150px-BCIT_logo.svg.png"
+    alt="BCIT Logo"
+    width="100"
+    height="100"
+    >
     <h2>Heading 2</h2>
     <main>
       <p>
