added cat image and footer

--- a/index.html
+++ b/index.html
@@ -4,16 +4,22 @@
     <meta charset="UTF-8" />
 
     <title>Personal Website</title>
-    <link href="css/stylesheet.css" rel="stylesheet" type="text/css">
+    <link href="css/stylesheet.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <h1>Heading 1</h1>
     <img
-    src="150px-BCIT_logo.svg.png"
-    alt="BCIT Logo"
-    width="100"
+      src="images\150px-BCIT_logo.svg.png"
+      alt="BCIT Logo"
+      width="100"
+      height="100"
+    />
+    <img
+    src="images\cat.jpg"
+    alt="wide cat"
+    width="300"
     height="100"
-    >
+  />
     <h2>Heading 2</h2>
     <main>
       <p>
@@ -26,5 +32,15 @@
         <li>1116</li>
       </ul>
     </main>
+    <footer>
+      <p>
+        Copyright:
+        <a
+          href="https://www.linkedin.com/learning/html-essential-training-2017"
+          title="LinkedIn learning course"
+          >LinkedIn Learning Course</a
+        >
+      </p>
+    </footer>
   </body>
 </html>
